# imfbookpython

./: README.md  Test.py  pyproject.toml  requirements.txt
src/imfpythonbook/: IMF_matplotlib.py  IMF_plotnine.py  WEO_matplotlib.py  WEO_plotnine.py  __init__.py
